--- a/src/applications/traefik/values.yaml
+++ b/src/applications/traefik/values.yaml
@@ -28,18 +28,10 @@ traefik-forward-auth:
       clientSecret: 5qcAAVXRkG5F5AtCsloXnP1TnQxIJry4
     genericOauth:
       enabled: true
-      authUrl: "https://keycloak.pastis-hosting.net/auth/realms/pastis-hosting.net"
-      tokenUrl: "https://keycloak.pastis-hosting.net/auth/realms/pastis-hosting.net/protocol/openid-connect/token"
-      userUrl: "https://keycloak.pastis-hosting.net/auth/realms/pastis-hosting.net/protocol/openid-connect/userinfo"
-      clientId: "traefik"
-      clientSecret: "5qcAAVXRkG5F5AtCsloXnP1TnQxIJry4"
-      scope: "profile, email"
-      tokenStyle: "access_token"
-  ingress:
-    enabled: true
-    annotations:
-      external-dns.alpha.kubernetes.io/hostname: trfk.pastis-hosting.net
-    hosts:
-      - host: trfk.pastis-hosting.net
-        paths:
-          - /
+      authUrl: https://keycloak.pastis-hosting.net/auth/realms/pastis-hosting.net
+      tokenUrl: https://keycloak.pastis-hosting.net/auth/realms/pastis-hosting.net/protocol/openid-connect/token
+      userUrl: https://keycloak.pastis-hosting.net/auth/realms/pastis-hosting.net/protocol/openid-connect/userinfo
+      clientId: traefik
+      clientSecret: 5qcAAVXRkG5F5AtCsloXnP1TnQxIJry4
+      scope: profile, email
+      tokenStyle: access_token
