--- a/src/applications/traefik/templates/route.yaml
+++ b/src/applications/traefik/templates/route.yaml
@@ -1,6 +1,7 @@
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
+  labels:
 {{ include "helm.labels" . | indent 4 }}
   namespace: {{ .Release.Namespace }}
   name: {{ .Release.Name }}-route
