--- a/src/applications/traefik/templates/route.yaml
+++ b/src/applications/traefik/templates/route.yaml
@@ -7,7 +7,7 @@ metadata:
   name: {{ .Release.Name }}-admin-routes
 spec:
   entryPoints:
-    - https
+    - websecure
   routes:
   - kind: Rule
     match: Host(`trfk.pastis-hosting.net`) && Path(`/dashboard`)
