--- a/src/applications/traefik/values.yaml
+++ b/src/applications/traefik/values.yaml
@@ -6,9 +6,8 @@ traefik:
     isDefaultClass: true
   ingressRoute:
     dashboard:
-      enabled: true
+      enabled: false
       annotations:
-        external-dns.alpha.kubernetes.io/hostname: trfk.pastis-hosting.net
         kubernetes.io/ingress.class: traefik-internal
   providers:
     kubernetesIngress:
