--- a/src/applications/traefik/templates/route.yaml
+++ b/src/applications/traefik/templates/route.yaml
@@ -14,3 +14,5 @@ spec:
       services:
         - name: api@internal
           kind: TraefikService
+      middlewares:
+        - name: traefik-forward-auth
