--- a/src/applications/traefik/values.yaml
+++ b/src/applications/traefik/values.yaml
@@ -4,6 +4,9 @@ traefik:
   ingressClass:
     enabled: true
     isDefaultClass: true
+  ingressRoute:
+    dashboard:
+      enabled: false
   providers:
     kubernetesIngress:
       publishedService:
