--- a/src/applications/traefik/values.yaml
+++ b/src/applications/traefik/values.yaml
@@ -35,7 +35,7 @@ traefik-forward-auth:
       clientId: traefik
       clientSecret: 5qcAAVXRkG5F5AtCsloXnP1TnQxIJry4
   ingress:
-    enabled: false
+    enabled: true
     annotations:
       external-dns.alpha.kubernetes.io/hostname: auth.traefik.pastis-hosting.net
     hosts:
