--- a/src/applications/traefik/values.yaml
+++ b/src/applications/traefik/values.yaml
@@ -25,6 +25,7 @@ traefik-forward-auth:
     provider: oidc
   cookie:
     domain: .pastis-hosting.net
+    unsecure: true
   middleware:
     enabled: true
     name: traefik-forward-auth
