--- a/src/applications/traefik/values.yaml
+++ b/src/applications/traefik/values.yaml
@@ -22,8 +22,8 @@ rollingUpdate:
 traefik-forward-auth:
   logging:
     level: debug
-  authHost: auth.traefik.pastis-hosting.net
-  urlPath: /dashboard/
+  # authHost: auth.traefik.pastis-hosting.net
+  # urlPath: /dashboard/
   default:
     provider: oidc
   cookie:
@@ -39,7 +39,7 @@ traefik-forward-auth:
       clientId: traefik
       clientSecret: hRjBDv4TYC3vfXS1tIiU7DFDMR8nwsF2
   ingress:
-    enabled: true
+    enabled: false
     annotations:
       external-dns.alpha.kubernetes.io/hostname: auth.traefik.pastis-hosting.net
     hosts:
