--- a/src/applications/traefik/templates/middleware.yaml
+++ b/src/applications/traefik/templates/middleware.yaml
@@ -7,7 +7,7 @@ metadata:
   name: traefik-forward-auth
 spec:
   forwardAuth:
-    address: http://traefik-traefik-forward-auth.traefik:4181/_oauth
+    address: http://traefik-traefik-forward-auth.traefik:4181
     trustForwardHeader: true
     authResponseHeaders:
       - X-Forwarded-User
