--- a/src/applications/external-dns/values.yaml
+++ b/src/applications/external-dns/values.yaml
@@ -2,7 +2,7 @@ external-dns:
   provider: cloudflare
   cloudflare:
     apiToken: BYR8IAr6DNRc5JfUZtGtirRzLJV-XMJAfwYjIKHK
+    proxied: false
   policy: upsert-only
   domainFilters:
-    - jeancloude.club
     - pastis-hosting.net
