--- a/src/applications/cert-manager/templates/issuer.yaml
+++ b/src/applications/cert-manager/templates/issuer.yaml
@@ -1,6 +1,7 @@
 apiVersion: cert-manager.io/v1
 kind: Issuer
 metadata:
+  labels:
 {{ include "helm.labels" . | indent 4 }}
   namespace: {{ .Release.Namespace }}
   name: {{ .Release.Name }}-cloudflare-staging-issuer
