--- a/src/applications/argocd/values.yaml
+++ b/src/applications/argocd/values.yaml
@@ -30,7 +30,7 @@ argo-cd:
         - argocd.pastis-hosting.net
       annotations:
         external-dns.alpha.kubernetes.io/hostname: argocd.pastis-hosting.net
-        cert-manager.io/cluster-issuer: nameOfClusterIssuer
+        cert-manager.io/cluster-issuer: cert-manager-cloudflare-staging-issuer
     ingressGrpc:
       enabled: true
       hosts:
