--- a/src/applications/argocd/values.yaml
+++ b/src/applications/argocd/values.yaml
@@ -28,6 +28,10 @@ argo-cd:
       enabled: true
       hosts:
         - argocd.pastis-hosting.net
+      tls:
+      - hosts:
+        - argocd.pastis-hosting.net
+        secretName: argocd-ingress-cert
       annotations:
         external-dns.alpha.kubernetes.io/hostname: argocd.pastis-hosting.net
         cert-manager.io/cluster-issuer: cert-manager-cloudflare-staging-issuer
