--- a/src/applications/cert-manager/templates/issuer.yaml
+++ b/src/applications/cert-manager/templates/issuer.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   acme:
     email: tristan@jeancloude.club
-    server: https://acme-staging-v02.api.letsencrypt.org/directory
+    server: https://acme-v02.api.letsencrypt.org/directory
     privateKeySecretRef:
       name: {{ .Release.Name }}-pastis-hosting-net-issuer-account-key
     solvers:
