--- a/src/applications/cert-manager/templates/issuer.yaml
+++ b/src/applications/cert-manager/templates/issuer.yaml
@@ -19,6 +19,5 @@ spec:
             name: {{ .Release.Name }}-cloudflare-api-token-secret
             key: api-token
       selector:
-        dnsNames:
+        dnsZones:
         - 'pastis-hosting.net'
-        - '*.pastis-hosting.net'
