--- a/src/applications/traefik/templates/route.yaml
+++ b/src/applications/traefik/templates/route.yaml
@@ -7,7 +7,7 @@ metadata:
   name: {{ .Release.Name }}-dashboard-route
 spec:
   entryPoints:
-    - web
+    - websecure
   routes:
     - match: Host(`trfk.pastis-hosting.net`) && (PathPrefix(`/dashboard/`) || PathPrefix(`/api`))
       kind: Rule
