--- a/src/applications/traefik/values.yaml
+++ b/src/applications/traefik/values.yaml
@@ -12,8 +12,12 @@ traefik:
       publishedService:
         enabled: true
   additionalArguments:
+    - "--entryPoints.web.proxyProtocol.insecure=true"
+    - "--entryPoints.web.forwardedHeaders.insecure=true"
     - "--entryPoints.websecure.proxyProtocol.insecure=true"
     - "--entryPoints.websecure.forwardedHeaders.insecure=true"
+  ports:
+    redirectTo: websecure
 rollingUpdate:
   maxUnavailable: 0
 
