--- a/src/applications/keycloak/values.yaml
+++ b/src/applications/keycloak/values.yaml
@@ -33,6 +33,8 @@ keycloak:
     type: ClusterIP
   ingress:
     enabled: true
+    tls: true
     hostname: keycloak.pastis-hosting.net
     annotations:
       external-dns.alpha.kubernetes.io/hostname: keycloak.pastis-hosting.net
+      cert-manager.io/cluster-issuer: cert-manager-pastis-hosting-net-issuer
