--- a/src/applications/traefik/values.yaml
+++ b/src/applications/traefik/values.yaml
@@ -45,6 +45,7 @@ traefik-forward-auth:
     enabled: true
     annotations:
       external-dns.alpha.kubernetes.io/hostname: auth-traefik.pastis-hosting.net
+      traefik.ingress.kubernetes.io/router.tls: "true"
     hosts:
       - host: auth-traefik.pastis-hosting.net
         paths:
