--- a/src/applications/traefik/templates/route.yaml
+++ b/src/applications/traefik/templates/route.yaml
@@ -16,3 +16,5 @@ spec:
           kind: TraefikService
       middlewares:
         - name: traefik-forward-auth
+  tls:
+    certResolver: cloudflare
