--- a/src/applications/traefik/values.yaml
+++ b/src/applications/traefik/values.yaml
@@ -16,6 +16,15 @@ traefik:
     - "--entryPoints.web.forwardedHeaders.insecure=true"
     - "--entryPoints.websecure.proxyProtocol.insecure=true"
     - "--entryPoints.websecure.forwardedHeaders.insecure=true"
+    - "--certificatesresolvers.cloudflare.acme.dnschallenge.provider=cloudflare"
+    - "--certificatesresolvers.cloudflare.acme.email=tristan@jeancloude.club"
+    - "--certificatesresolvers.cloudflare.acme.dnschallenge.resolvers=1.1.1.1"
+    - "--certificatesresolvers.cloudflare.acme.storage=/certs/acme.json"
+  env:
+    - name: CF_API_EMAIL
+      value: contact@constructions-incongrues.net
+    - name: CF_API_KEY
+      value: BYR8IAr6DNRc5JfUZtGtirRzLJV-XMJAfwYjIKHK
   ports:
     web:
       redirectTo: websecure
