--- a/src/applications/traefik/values.yaml
+++ b/src/applications/traefik/values.yaml
@@ -1,4 +1,14 @@
 traefik:
+  persistence:
+    enabled: true
+    accessMode: ReadWriteMany
+    subPath: "traefik"
+    size: 1Gi
+  securityContext:
+    readOnlyRootFilesystem: false
+    runAsGroup: 0
+    runAsUser: 0
+    runAsNonRoot: false
   deployment:
     replicas: 1
   ingressClass:
@@ -19,6 +29,7 @@ traefik:
     - "--certificatesresolvers.cloudflare.acme.dnschallenge.provider=cloudflare"
     - "--certificatesresolvers.cloudflare.acme.email=tristan@jeancloude.club"
     - "--certificatesresolvers.cloudflare.acme.dnschallenge.resolvers=1.1.1.1"
+    - "--certificatesresolvers.cloudflare.acme.storage=/data/acme.json"
   env:
     - name: CF_API_EMAIL
       value: contact@constructions-incongrues.net
