--- a/src/applications/traefik/values.yaml
+++ b/src/applications/traefik/values.yaml
@@ -33,7 +33,7 @@ traefik:
   env:
     - name: CF_API_EMAIL
       value: contact@constructions-incongrues.net
-    - name: CF_API_KEY
+    - name: CF_DNS_API_TOKEN
       value: BYR8IAr6DNRc5JfUZtGtirRzLJV-XMJAfwYjIKHK
   ports:
     web:
