--- a/src/applications/traefik/values.yaml
+++ b/src/applications/traefik/values.yaml
@@ -44,12 +44,11 @@ rollingUpdate:
 traefik-forward-auth:
   logging:
     level: debug
-  authHost: auth-traefik.pastis-hosting.net
+  # authHost: auth-traefik.pastis-hosting.net
   default:
     provider: oidc
   cookie:
     domain: pastis-hosting.net
-    insecure: true
   middleware:
     enabled: false
     name: traefik-forward-auth
