--- a/src/applications/traefik/values.yaml
+++ b/src/applications/traefik/values.yaml
@@ -44,7 +44,7 @@ rollingUpdate:
 traefik-forward-auth:
   logging:
     level: debug
-  authHost: auth-traefik.pastis-hosting.net
+  # authHost: auth-traefik.pastis-hosting.net
   default:
     provider: oidc
   cookie:
@@ -59,7 +59,7 @@ traefik-forward-auth:
       clientId: traefik
       clientSecret: hRjBDv4TYC3vfXS1tIiU7DFDMR8nwsF2
   ingress:
-    enabled: true
+    enabled: false
     annotations:
       external-dns.alpha.kubernetes.io/hostname: auth-traefik.pastis-hosting.net
       traefik.ingress.kubernetes.io/router.tls: "true"
