--- a/src/applications/vault/values.yaml
+++ b/src/applications/vault/values.yaml
@@ -6,3 +6,9 @@ vault:
         cert-manager.io/cluster-issuer: cert-manager-pastis-hosting-net-issuer
         external-dns.alpha.kubernetes.io/hostname: vault.pastis-hosting.net
         traefik.ingress.kubernetes.io/router.tls: "true"
+      hosts:
+        - vault.pastis-hosting.net
+      tls:
+      - hosts:
+        - vault.pastis-hosting.net
+        secretName: vault-ingress-cert
