--- a/src/applications/pastis-hosting/Chart.yaml
+++ b/src/applications/pastis-hosting/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: vault
+name: pastis-hosting
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
@@ -21,8 +21,3 @@ version: 0.1.0
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 appVersion: "1.0"
-
-dependencies:
-- name: vault
-  version: 0.19.0
-  repository: https://helm.releases.hashicorp.com
