--- a/src/applications/pastis-hosting/templates/project.yaml
+++ b/src/applications/pastis-hosting/templates/project.yaml
@@ -4,8 +4,8 @@ kind: AppProject
 metadata:
   labels:
 {{ include "helm.labels" . | indent 4 }}
-  namespace: {{ .Release.Namespace }}
-  name: pastis-hosting.net
+  namespace: {{ Release.Namespace }}
+  name: pastis-hosting
   # Finalizer that ensures that project is not deleted until it is not referenced by any application
   finalizers:
     - resources-finalizer.argocd.argoproj.io
