--- a/src/applications/argocd/templates/applicationset.yaml
+++ b/src/applications/argocd/templates/applicationset.yaml
@@ -15,7 +15,7 @@ spec:
   template:
     metadata:
       name: '{{`{{path.basename}}`}}'
-      namespace: '{{ Release.Namespace }}'
+      namespace: ph-argocd
       finalizers:
       - resources-finalizer.argocd.argoproj.io
     spec:
