--- a/src/applications/keycloak/values.yaml
+++ b/src/applications/keycloak/values.yaml
@@ -1,7 +1,7 @@
 keycloak:
   extraEnvVars:
     - name: KEYCLOAK_EXTRA_ARGS
-      value: "-Dkeycloak.import=/config/realms.json"
+      value: "-Dkeycloak.migration.action=import -Dkeycloak.migration.provider=singleFile -Dkeycloak.migration.file=/config/realms.json"
   extraVolumeMounts:
     - name: config
       mountPath: "/config"
