--- a/src/applications/k10-config/templates/policies/disaster-recovery.yaml
+++ b/src/applications/k10-config/templates/policies/disaster-recovery.yaml
@@ -3,7 +3,7 @@ kind: Policy
 metadata:
   labels:
 {{ include "helm.labels" . | indent 4 }}
-  namespace: k10
+  namespace: ph-k10
   name: k10-disaster-recovery-policy
 spec:
   frequency: "@daily"
@@ -17,7 +17,7 @@ spec:
       backupParameters:
         profile:
           name: {{ .Release.Name }}-icekubes-location-objectstore-de
-          namespace: k10
+          namespace: ph-k10
   selector:
     matchExpressions:
       - key: k10.kasten.io/appNamespace
