--- a/src/applications/k10-config/templates/policies/system-reports.yaml
+++ b/src/applications/k10-config/templates/policies/system-reports.yaml
@@ -3,7 +3,7 @@ kind: Policy
 metadata:
   labels:
 {{ include "helm.labels" . | indent 4 }}
-  namespace: k10
+  namespace: ph-k10
   name: k10-system-reports-policy
 spec:
   actions:
