--- a/src/applications/k10-config/templates/profiles/kanister/de.yaml
+++ b/src/applications/k10-config/templates/profiles/kanister/de.yaml
@@ -3,7 +3,7 @@ kind: Profile
 metadata:
   labels:
 {{ include "helm.labels" . | indent 4 }}
-  namespace: k10
+  namespace: ph-k10
   name: {{ .Release.Name }}-kanister-profile
 spec:
   type: Kanister
@@ -14,7 +14,7 @@ spec:
         apiVersion: v1
         kind: secret
         name: {{ .Release.Name }}-icekubes-aws
-        namespace: k10
+        namespace: ph-k10
     location:
       type: ObjectStore
       objectStore:
