--- a/src/applications/k10-config/templates/profiles/location/de.yaml
+++ b/src/applications/k10-config/templates/profiles/location/de.yaml
@@ -3,7 +3,7 @@ kind: Profile
 metadata:
   labels:
 {{ include "helm.labels" . | indent 4 }}
-  namespace: k10
+  namespace: ph-k10
   name: {{ .Release.Name }}-icekubes-location-objectstore-de
 spec:
   locationSpec:
@@ -12,7 +12,7 @@ spec:
         apiVersion: v1
         kind: secret
         name: {{ .Release.Name }}-icekubes-aws
-        namespace: k10
+        namespace: ph-k10
       secretType: AwsAccessKey
     objectStore:
       endpoint: https://s3.de.cloud.ovh.net
