--- a/src/applications/k10-config/templates/secrets/aws.yaml
+++ b/src/applications/k10-config/templates/secrets/aws.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   labels:
 {{ include "helm.labels" . | indent 4 }}
-  namespace: k10
+  namespace: ph-k10
   name: {{ .Release.Name }}-icekubes-aws
 data:
   aws_access_key_id: ZGEzYWRmYzNjMWJiNGJmMTg4MGJkNDRmMTIyOTZkNDg=
