--- a/src/applications/k10-config/templates/secrets/k10-dr.yaml
+++ b/src/applications/k10-config/templates/secrets/k10-dr.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   labels:
 {{ include "helm.labels" . | indent 4 }}
-  namespace: k10
+  namespace: ph-k10
   name: {{ .Release.Name }}-dr-secret
 data:
   key: dXJWdkdrZXVVdzY0WlE2
