--- a/src/applications/keycloak/values.yaml
+++ b/src/applications/keycloak/values.yaml
@@ -30,6 +30,6 @@ keycloak:
       annotations:
         k10.kasten.io/forcegenericbackup: 'true'
       labels:
-        k10/injectKanisterSidecar: 'true'
+        k10.kasten.io/injectKanisterSidecar: 'true'
   service:
     type: ClusterIP
