--- a/src/applications/keycloak/templates/k10.yaml
+++ b/src/applications/keycloak/templates/k10.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
 {{ include "helm.labels" . | indent 4 }}
   namespace: {{ .Release.Namespace }}
-  name: {{ .Release.Name }}-k10-policy
+  name: ph-{{ .Release.Name }}
 spec:
   comment: ""
   frequency: "@daily"
