--- a/src/applications/keycloak/values.yaml
+++ b/src/applications/keycloak/values.yaml
@@ -1,7 +1,7 @@
 keycloak:
-  replicaCount: 2
-  serviceDiscovery:
-    enabled: true	
+  # replicaCount: 2
+  # serviceDiscovery:
+  #   enabled: true
   extraEnvVars:
     - name: KEYCLOAK_EXTRA_ARGS
       value: "-Dkeycloak.migration.action=import -Dkeycloak.migration.provider=singleFile -Dkeycloak.migration.file=/config/realms.json"
