--- a/src/applications/sealed-secrets/Chart.yaml
+++ b/src/applications/sealed-secrets/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: vault
+name: sealed-secrets
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
@@ -23,6 +23,6 @@ version: 0.1.0
 appVersion: "1.0"
 
 dependencies:
-- name: vault
-  version: 0.19.0
-  repository: https://helm.releases.hashicorp.com
+- name: sealed-secrets
+  version: 2.1.2
+  repository: https://charts.bitnami.com/bitnami
