--- a/src/applications/sealed-secrets/Chart.yaml
+++ b/src/applications/sealed-secrets/Chart.yaml
@@ -25,4 +25,4 @@ appVersion: "1.0"
 dependencies:
 - name: sealed-secrets
   version: 2.1.2
-  repository: https://charts.bitnami.com/bitnami
+  repository: https://bitnami-labs.github.io/sealed-secrets
