--- a/src/applications/keycloak/values.yaml
+++ b/src/applications/keycloak/values.yaml
@@ -38,5 +38,5 @@ keycloak:
     type: ClusterIP
     annotations:
       traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
-      traefik.ingress.kubernetes.io/service.sticky.cookie.name: {{ .Release.Name }}
+      traefik.ingress.kubernetes.io/service.sticky.cookie.name: '{{ .Release.Name }}'
       traefik.ingress.kubernetes.io/service.sticky.cookie.secure: "true"
