--- a/src/applications/keycloak/values.yaml
+++ b/src/applications/keycloak/values.yaml
@@ -6,6 +6,7 @@ keycloak:
   replicaCount: 2
   serviceDiscovery:
     enabled: true
+    protocol: dns.DNS_PING
   extraEnvVars:
     - name: KEYCLOAK_EXTRA_ARGS
       value: "-Dkeycloak.migration.action=import -Dkeycloak.migration.provider=singleFile -Dkeycloak.migration.file=/config/realms.json"
