--- a/src/applications/argocd/values.yaml
+++ b/src/applications/argocd/values.yaml
@@ -1,6 +1,7 @@
 argo-cd:
-  image:
-    tag: '2.3.0-rc5'
+  global:
+    image:
+      tag: '2.3.0-rc5'
   installCRDs: true
   dex:
     enabled: false
